<resources>
    <string name="app_name">PartyMaker</string>

    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>

    <string name="party_dialog_hint">Enter a unique party name</string>
    <string name="party_dialog_title">Create a party</string>
    <string name="party_dialog_btn_done">Done</string>
    <string name="party_dialog_btn_cancel">Cancel</string>
    <string name="btn_party_list_delete">Delete</string>
    <string name="party_delete_dialog_btn_cancel">Cancel</string>
    <string name="party_delete_dialog_btn_yes">Yes</string>
    <string name="party_delete_dialog_static">Are you sure you want to delete:</string>
    <string name="menu_search">Search</string>
    <string name="meal_search_hint_search_view">Enter a meal name</string>
    <string name="cocktail_search_hint_search_view">Enter a cocktail name</string>
    <string name="chip_beef">Beef</string>
    <string name="chip_breakfast">Breakfast</string>
    <string name="chip_chicken">Chicken</string>
    <string name="chip_dessert">Dessert</string>
    <string name="chip_goat">Goat</string>
    <string name="chip_lamb">Lamb</string>
    <string name="chip_miscellaneous">Miscellaneous</string>
    <string name="chip_pasta">Pasta</string>
    <string name="chip_pork">Pork</string>
    <string name="chip_seafood">Seafood</string>
    <string name="chip_side">Side</string>
    <string name="chip_starter">Starter</string>
    <string name="chip_vegan">Vegan</string>
    <string name="chip_vegetarian">Vegetarian</string>
    <string name="chip_alcoholic">Alcoholic</string>
    <string name="chip_non_alcoholic">Non alcoholic</string>
    <string name="chip_optional_alcohol">Optional alcohol</string>
    <string name="meal_details_ingredients_title">Ingredients</string>
    <string name="meal_details_instructions_title">Instructions</string>
    <string name="meal_details_details_title">Details</string>
    <string name="btn_meal_details_add">Add</string>
    <string name="btn_meal_details_delete">Delete</string>
</resources>