<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.meals.search.MealSearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PartyMaker.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_meal_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.PartyMaker.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/ll_container_meal_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <HorizontalScrollView
            android:id="@+id/hsv_meal_search_chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:visibility="invisible">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_group_meal_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:selectionRequired="false"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_beef"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_beef" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_breakfast"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_breakfast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_chicken"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_chicken" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dessert"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_dessert" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_goat"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_goat" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_lamb"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_lamb" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_miscellaneous"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_miscellaneous" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pasta"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_pasta" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pork"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_pork" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_seafood"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_seafood" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_side"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_side" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_starter"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_starter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegan"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_vegan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegetarian"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_vegetarian" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <include
            android:id="@+id/layout_meal_list_included"
            layout="@layout/layout_recycler" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>