<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_party_delete_dialog_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_delete_dialog_static"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_party_delete_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_party_delete_dialog_static"
        tools:text="My party" />

    <Button
        android:id="@+id/btn_party_delete_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/party_delete_dialog_btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_party_delete_dialog_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_party_delete_dialog_name" />

    <Button
        android:id="@+id/btn_party_delete_dialog_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_delete_dialog_btn_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_party_delete_dialog_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_party_delete_dialog_cancel" />

    <ProgressBar
        android:id="@+id/pb_party_delete_dialog"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_party_delete_dialog_cancel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btns_party_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_party_delete_dialog_cancel, btn_party_delete_dialog_yes" />

</androidx.constraintlayout.widget.ConstraintLayout>